# AiTagger

./: CMakeLists.txt  Readme.md  bar.cpp  bar.h  get-models.sh  llmai.cpp  llmai.h  main.cpp  options.h  tag.cpp  tag.h  testtag.cpp  utils.cpp  utils.h
